# tg-bot-fitness

./: Cargo.toml
.github/workflows/: validate.yml
migrations/2024-01-29-183611_create_users_table/: up.sql
migrations/2024-01-29-183628_create_diet_lists/: down.sql  up.sql
migrations/2024-01-29-183628_create_diet_lists_for_user/: up.sql
migrations/2024-01-29-183659_create_gym_trainings_for_user/: down.sql  up.sql
migrations/2024-01-29-183659_create_trainings/: up.sql
migrations/2024-01-29-183659_create_trainings_for_user/: up.sql
migrations/2024-01-29-183703_create_home_trainings_for_user/: up.sql
migrations/2024-02-14-123114_add_before_size_table/: down.sql  up.sql
migrations/2024-02-14-123114_add_size_table/: up.sql
migrations/2024-02-14-123119_add_after_size_table/: down.sql  up.sql
src/: consts.rs  errors.rs  main.rs  models.rs  utils.rs
src/api_calls/: basic_methods.rs  diet.rs  menu.rs  mod.rs  registration.rs  trainings.rs
src/async_openai/: client.rs
src/db/: database.rs  db.rs  models.rs  schema.rs
