[package]
name = "tg-bot-fitness"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
diesel = { version = "=2.1.4", features = [
    "postgres",
    "extras",
    "uuid",
    "numeric",
    "chrono",
] }
serde = "1.0.196"
serde_json = "1.0.113"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
thiserror = "1.0.56"
fern = "0.6"