[package]
name = "tg-bot-fitness"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12.2", features = ["macros"] }
log = "0.4.2"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
diesel = { version = "=2.1.4", features = [
    "postgres",
    "extras",
    "uuid",
    "numeric",
    "chrono",
] }
serde = "1.0.196"
serde_json = "1.0.113"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
async-openai = "0.18.2"
thiserror = "1.0.56"
fern = "0.6.2"
colored = "2.1.0"
regex = "1.10.3"
plotters = "0.3.5"
plotters-bitmap = "0.3.3"